Fixed dependencies for Java 11
+ added version check plugin
+ updated compiler plugins
+ (changed version in intellij module)